--- a/notebooks/inferencia.ipynb
+++ b/notebooks/inferencia.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMo6/4/rskap2oCg+uRm3YL",
+      "authorship_tag": "ABX9TyPeS4wD00oThWulM9+/rJ58",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/luiseduaardo/PneuModel/blob/main/inferencia.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/luiseduaardo/PneuModel/blob/main/notebooks/inferencia.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -37,7 +37,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "va47GC9OpaZG",
-        "outputId": "8532b907-d975-4062-b280-29e588a2f7b9"
+        "outputId": "47687141-716c-4878-f827-5e8f7c337af0"
       },
       "execution_count": 1,
       "outputs": [
@@ -46,13 +46,12 @@
           "name": "stdout",
           "text": [
             "Cloning into 'PneuModel'...\n",
-            "remote: Enumerating objects: 5873, done.\u001b[K\n",
-            "remote: Counting objects: 100% (8/8), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (6/6), done.\u001b[K\n",
-            "remote: Total 5873 (delta 2), reused 6 (delta 1), pack-reused 5865 (from 3)\u001b[K\n",
-            "Receiving objects: 100% (5873/5873), 1.25 GiB | 17.48 MiB/s, done.\n",
-            "Resolving deltas: 100% (4/4), done.\n",
-            "Updating files: 100% (5862/5862), done.\n",
+            "remote: Enumerating objects: 5902, done.\u001b[K\n",
+            "remote: Counting objects: 100% (1/1), done.\u001b[K\n",
+            "remote: Total 5902 (delta 0), reused 0 (delta 0), pack-reused 5901 (from 3)\u001b[K\n",
+            "Receiving objects: 100% (5902/5902), 1.26 GiB | 14.97 MiB/s, done.\n",
+            "Resolving deltas: 100% (18/18), done.\n",
+            "Updating files: 100% (5863/5863), done.\n",
             "/content/PneuModel\n"
           ]
         }
@@ -77,8 +76,8 @@
         "path_teste = \"./data/test\"\n",
         "\n",
         "# carrega o modelo\n",
-        "if os.path.exists('melhor_modelo_pneumonia.h5'):\n",
-        "  model = tf.keras.models.load_model('melhor_modelo_pneumonia.h5')\n",
+        "if os.path.exists('./weights/melhor_modelo_pneumonia.h5'):\n",
+        "  model = tf.keras.models.load_model('./weights/melhor_modelo_pneumonia.h5')\n",
         "  print(\"✅ O modelo foi carregado com sucesso\")\n",
         "else:\n",
         "  print(\"❌ O modelo não foi carregado\")"
@@ -88,7 +87,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "25162603-c96d-4b26-afaa-d48965feae05"
+        "outputId": "96fcd5b4-e9b1-4465-c51c-5a6642c15011"
       },
       "execution_count": 3,
       "outputs": [
@@ -116,7 +115,7 @@
         "\n",
         "test_generator = test_datagen.flow_from_directory(\n",
         "    path_teste,\n",
-        "    target_size=(224, 224),\n",
+        "    target_size=(384, 384),\n",
         "    batch_size=1,\n",
         "    class_mode=None,\n",
         "    shuffle=False\n",
@@ -130,7 +129,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "9bbe7272-5f6c-4504-b2c6-6a737d679c0b"
+        "outputId": "b518600f-ad61-49d0-a242-a2180398e17c"
       },
       "execution_count": 4,
       "outputs": [
@@ -153,7 +152,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\u001b[1m624/624\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m112s\u001b[0m 175ms/step\n"
+            "\u001b[1m624/624\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m288s\u001b[0m 458ms/step\n"
           ]
         }
       ]
@@ -161,7 +160,7 @@
     {
       "cell_type": "code",
       "source": [
-        "ids = [os.path.splitext(os.path.basename(x))[0] for x in test_generator.filenames]\n",
+        "ids = [os.path.basename(x) for x in test_generator.filenames]\n",
         "\n",
         "submissao = pd.DataFrame({\n",
         "    'id': ids,\n",
@@ -176,24 +175,24 @@
           "base_uri": "https://localhost:8080/",
           "height": 206
         },
-        "outputId": "3225780b-acd2-4d4d-ae92-bedb044129d2"
+        "outputId": "ef9d0a80-4036-40e8-de40-4f2b54676274"
       },
-      "execution_count": 5,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "         id    target\n",
-              "0  img_0001  0.439492\n",
-              "1  img_0002  0.408302\n",
-              "2  img_0003  0.999333\n",
-              "3  img_0004  0.017608\n",
-              "4  img_0005  0.082104"
+              "              id    target\n",
+              "0  img_0001.jpeg  0.386153\n",
+              "1  img_0002.jpeg  0.158705\n",
+              "2  img_0003.jpeg  0.998453\n",
+              "3  img_0004.jpeg  0.008347\n",
+              "4  img_0005.jpeg  0.086193"
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-afd87ff4-0d17-4c77-8449-0643d870bb59\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-d45bc425-b70d-4db1-88fb-a85cd0d8d9cc\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -219,28 +218,28 @@
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>0</th>\n",
-              "      <td>img_0001</td>\n",
-              "      <td>0.439492</td>\n",
+              "      <td>img_0001.jpeg</td>\n",
+              "      <td>0.386153</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
-              "      <td>img_0002</td>\n",
-              "      <td>0.408302</td>\n",
+              "      <td>img_0002.jpeg</td>\n",
+              "      <td>0.158705</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
-              "      <td>img_0003</td>\n",
-              "      <td>0.999333</td>\n",
+              "      <td>img_0003.jpeg</td>\n",
+              "      <td>0.998453</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
-              "      <td>img_0004</td>\n",
-              "      <td>0.017608</td>\n",
+              "      <td>img_0004.jpeg</td>\n",
+              "      <td>0.008347</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
-              "      <td>img_0005</td>\n",
-              "      <td>0.082104</td>\n",
+              "      <td>img_0005.jpeg</td>\n",
+              "      <td>0.086193</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
@@ -248,7 +247,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-afd87ff4-0d17-4c77-8449-0643d870bb59')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-d45bc425-b70d-4db1-88fb-a85cd0d8d9cc')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -300,12 +299,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-afd87ff4-0d17-4c77-8449-0643d870bb59 button.colab-df-convert');\n",
+              "        document.querySelector('#df-d45bc425-b70d-4db1-88fb-a85cd0d8d9cc button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-afd87ff4-0d17-4c77-8449-0643d870bb59');\n",
+              "        const element = document.querySelector('#df-d45bc425-b70d-4db1-88fb-a85cd0d8d9cc');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -331,11 +330,11 @@
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "dataframe",
               "variable_name": "submissao",
-              "summary": "{\n  \"name\": \"submissao\",\n  \"rows\": 624,\n  \"fields\": [\n    {\n      \"column\": \"id\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"num_unique_values\": 624,\n        \"samples\": [\n          \"img_0447\",\n          \"img_0497\",\n          \"img_0216\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"target\",\n      \"properties\": {\n        \"dtype\": \"float32\",\n        \"num_unique_values\": 620,\n        \"samples\": [\n          0.12923310697078705,\n          0.9999690651893616,\n          0.07186580449342728\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    }\n  ]\n}"
+              "summary": "{\n  \"name\": \"submissao\",\n  \"rows\": 624,\n  \"fields\": [\n    {\n      \"column\": \"id\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"num_unique_values\": 624,\n        \"samples\": [\n          \"img_0447.jpeg\",\n          \"img_0497.jpeg\",\n          \"img_0216.jpeg\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"target\",\n      \"properties\": {\n        \"dtype\": \"float32\",\n        \"num_unique_values\": 619,\n        \"samples\": [\n          0.03326418623328209,\n          0.9993652105331421,\n          0.01610608585178852\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    }\n  ]\n}"
             }
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 7
         }
       ]
     },
@@ -347,7 +346,7 @@
       "metadata": {
         "id": "NQPsBywDpUnQ"
       },
-      "execution_count": 6,
+      "execution_count": 8,
       "outputs": []
     }
   ]
