--- a/notebooks/inferencia.ipynb
+++ b/notebooks/inferencia.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPeS4wD00oThWulM9+/rJ58",
+      "authorship_tag": "ABX9TyPH9yrCTGDpbzMLFTypYCd7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,37 +29,47 @@
     {
       "cell_type": "code",
       "source": [
-        "!git clone https://github.com/luiseduaardo/PneuModel\n",
-        "%cd PneuModel"
+        "import os\n",
+        "import zipfile\n",
+        "from google.colab import drive\n",
+        "\n",
+        "drive.mount('/content/drive')\n",
+        "\n",
+        "caminho_zip_drive = '/content/drive/MyDrive/PneuModel/ligia-compviz.zip'\n",
+        "caminho_local_zip = '/content/ligia-compviz.zip'\n",
+        "\n",
+        "if os.path.exists(caminho_zip_drive):\n",
+        "    !cp \"{caminho_zip_drive}\" \"{caminho_local_zip}\"\n",
+        "\n",
+        "    with zipfile.ZipFile(caminho_local_zip, 'r') as zip_ref:\n",
+        "        zip_ref.extractall('/content/dataset')\n",
+        "\n",
+        "    print(\"✅ Sucesso: Dataset extraído em /content/dataset\")\n",
+        "else:\n",
+        "    print(\"❌ Erro: O arquivo não foi encontrado no caminho especificado.\")"
       ],
       "metadata": {
+        "id": "va47GC9OpaZG",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "va47GC9OpaZG",
-        "outputId": "47687141-716c-4878-f827-5e8f7c337af0"
+        "outputId": "788e8b8c-f4dc-48bd-d767-d960be1dec4c"
       },
-      "execution_count": 1,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Cloning into 'PneuModel'...\n",
-            "remote: Enumerating objects: 5902, done.\u001b[K\n",
-            "remote: Counting objects: 100% (1/1), done.\u001b[K\n",
-            "remote: Total 5902 (delta 0), reused 0 (delta 0), pack-reused 5901 (from 3)\u001b[K\n",
-            "Receiving objects: 100% (5902/5902), 1.26 GiB | 14.97 MiB/s, done.\n",
-            "Resolving deltas: 100% (18/18), done.\n",
-            "Updating files: 100% (5863/5863), done.\n",
-            "/content/PneuModel\n"
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n",
+            "✅ Sucesso: Dataset extraído em /content/dataset\n"
           ]
         }
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 6,
       "metadata": {
         "id": "spkLoWetfp-q"
       },
@@ -73,11 +83,12 @@
     {
       "cell_type": "code",
       "source": [
-        "path_teste = \"./data/test\"\n",
+        "path_teste = \"./dataset/test_images\"\n",
+        "modelo_path = '/content/drive/MyDrive/PneuModel/melhor_modelo_pneumonia.h5'\n",
         "\n",
         "# carrega o modelo\n",
-        "if os.path.exists('./weights/melhor_modelo_pneumonia.h5'):\n",
-        "  model = tf.keras.models.load_model('./weights/melhor_modelo_pneumonia.h5')\n",
+        "if os.path.exists(modelo_path):\n",
+        "  model = tf.keras.models.load_model(modelo_path)\n",
         "  print(\"✅ O modelo foi carregado com sucesso\")\n",
         "else:\n",
         "  print(\"❌ O modelo não foi carregado\")"
@@ -87,9 +98,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "96fcd5b4-e9b1-4465-c51c-5a6642c15011"
+        "outputId": "e16b6a74-df8e-41fb-923e-4757c10f3935"
       },
-      "execution_count": 3,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -115,7 +126,7 @@
         "\n",
         "test_generator = test_datagen.flow_from_directory(\n",
         "    path_teste,\n",
-        "    target_size=(384, 384),\n",
+        "    target_size=(224, 224),\n",
         "    batch_size=1,\n",
         "    class_mode=None,\n",
         "    shuffle=False\n",
@@ -129,9 +140,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "b518600f-ad61-49d0-a242-a2180398e17c"
+        "outputId": "1aa0dedb-a472-4651-860e-c1f2057aeb7e"
       },
-      "execution_count": 4,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -152,7 +163,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\u001b[1m624/624\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m288s\u001b[0m 458ms/step\n"
+            "\u001b[1m624/624\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m141s\u001b[0m 221ms/step\n"
           ]
         }
       ]
@@ -175,24 +186,24 @@
           "base_uri": "https://localhost:8080/",
           "height": 206
         },
-        "outputId": "ef9d0a80-4036-40e8-de40-4f2b54676274"
+        "outputId": "d12981ff-cd70-43e8-aefe-011e55fe87da"
       },
-      "execution_count": 7,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
               "              id    target\n",
-              "0  img_0001.jpeg  0.386153\n",
-              "1  img_0002.jpeg  0.158705\n",
-              "2  img_0003.jpeg  0.998453\n",
-              "3  img_0004.jpeg  0.008347\n",
-              "4  img_0005.jpeg  0.086193"
+              "0  img_0001.jpeg  0.381128\n",
+              "1  img_0002.jpeg  0.448621\n",
+              "2  img_0003.jpeg  0.998110\n",
+              "3  img_0004.jpeg  0.006061\n",
+              "4  img_0005.jpeg  0.024156"
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-d45bc425-b70d-4db1-88fb-a85cd0d8d9cc\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-aa20691c-bf2f-4612-856d-acd4f179de38\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -219,27 +230,27 @@
               "    <tr>\n",
               "      <th>0</th>\n",
               "      <td>img_0001.jpeg</td>\n",
-              "      <td>0.386153</td>\n",
+              "      <td>0.381128</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
               "      <td>img_0002.jpeg</td>\n",
-              "      <td>0.158705</td>\n",
+              "      <td>0.448621</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
               "      <td>img_0003.jpeg</td>\n",
-              "      <td>0.998453</td>\n",
+              "      <td>0.998110</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
               "      <td>img_0004.jpeg</td>\n",
-              "      <td>0.008347</td>\n",
+              "      <td>0.006061</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
               "      <td>img_0005.jpeg</td>\n",
-              "      <td>0.086193</td>\n",
+              "      <td>0.024156</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
@@ -247,7 +258,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-d45bc425-b70d-4db1-88fb-a85cd0d8d9cc')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-aa20691c-bf2f-4612-856d-acd4f179de38')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -299,12 +310,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-d45bc425-b70d-4db1-88fb-a85cd0d8d9cc button.colab-df-convert');\n",
+              "        document.querySelector('#df-aa20691c-bf2f-4612-856d-acd4f179de38 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-d45bc425-b70d-4db1-88fb-a85cd0d8d9cc');\n",
+              "        const element = document.querySelector('#df-aa20691c-bf2f-4612-856d-acd4f179de38');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -330,23 +341,24 @@
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "dataframe",
               "variable_name": "submissao",
-              "summary": "{\n  \"name\": \"submissao\",\n  \"rows\": 624,\n  \"fields\": [\n    {\n      \"column\": \"id\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"num_unique_values\": 624,\n        \"samples\": [\n          \"img_0447.jpeg\",\n          \"img_0497.jpeg\",\n          \"img_0216.jpeg\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"target\",\n      \"properties\": {\n        \"dtype\": \"float32\",\n        \"num_unique_values\": 619,\n        \"samples\": [\n          0.03326418623328209,\n          0.9993652105331421,\n          0.01610608585178852\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    }\n  ]\n}"
+              "summary": "{\n  \"name\": \"submissao\",\n  \"rows\": 624,\n  \"fields\": [\n    {\n      \"column\": \"id\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"num_unique_values\": 624,\n        \"samples\": [\n          \"img_0447.jpeg\",\n          \"img_0497.jpeg\",\n          \"img_0216.jpeg\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"target\",\n      \"properties\": {\n        \"dtype\": \"float32\",\n        \"num_unique_values\": 621,\n        \"samples\": [\n          0.0805995911359787,\n          0.999572217464447,\n          0.16780292987823486\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    }\n  ]\n}"
             }
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 9
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "submissao.to_csv('submission.csv', index=False)"
+        "caminho_destino_drive = '/content/drive/MyDrive/PneuModel/submission.csv'\n",
+        "submissao.to_csv(caminho_destino_drive, index=False, sep=',')"
       ],
       "metadata": {
         "id": "NQPsBywDpUnQ"
       },
-      "execution_count": 8,
+      "execution_count": 10,
       "outputs": []
     }
   ]
