feat: implementação do fine tuning (não testada)

--- a/notebooks/treinamento.ipynb
+++ b/notebooks/treinamento.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyPisDMvuZsdNHTKDjZ7qcc4",
+      "authorship_tag": "ABX9TyMRyMOMijTy+FnVI4RfdwzX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -153,7 +153,6 @@
       "cell_type": "code",
       "source": [
         "base_model = ResNet50(weights='imagenet', include_top=False, input_shape=(224, 224, 3))\n",
-        "\n",
         "base_model.trainable = False\n",
         "\n",
         "model = models.Sequential([\n",
@@ -226,6 +225,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# treino warm-up\n",
         "history = model.fit(\n",
         "    train_generator,\n",
         "    epochs=20, # Limite alto, mas geralmente o EarlyStopping para antes\n",
@@ -390,6 +390,35 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# fine tuning\n",
+        "base_model.trainable = True\n",
+        "\n",
+        "for layer in base_model.layers[:-30]: # deixa apenas as últimas 30 camadas treináveis\n",
+        "    layer.trainable = False\n",
+        "\n",
+        "model.compile(\n",
+        "    optimizer=tf.keras.optimizers.Adam(learning_rate=0.00001), # baixa lr para não destruir o aprendizado anterior\n",
+        "    loss='binary_crossentropy',\n",
+        "    metrics=[tf.keras.metrics.AUC(name='auc')]\n",
+        ")\n",
+        "\n",
+        "history_finetuning = model.fit(\n",
+        "    train_generator,\n",
+        "    epochs=10,\n",
+        "    validation_data=val_generator,\n",
+        "    callbacks=[checkpoint, early_stop],\n",
+        "    class_weight=class_weights\n",
+        ")"
+      ],
+      "metadata": {
+        "id": "cPiLPBjna-QO"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
