--- a/notebooks/eda.ipynb
+++ b/notebooks/eda.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOPTlDtVtJ2KSXqh+6CmUlx",
+      "authorship_tag": "ABX9TyMxX1PH/CdRUmpCVgL4bvon",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,22 +37,98 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "dHy8JOYd-Pmc",
-        "outputId": "c662fa08-520a-4f66-cad8-78bb6f38cdd8"
+        "outputId": "f39802aa-2737-4473-a101-704ddee79a3f"
       },
-      "execution_count": 1,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Cloning into 'PneuModel'...\n",
-            "remote: Enumerating objects: 5930, done.\u001b[K\n",
-            "remote: Counting objects: 100% (29/29), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (27/27), done.\u001b[K\n",
-            "remote: Total 5930 (delta 12), reused 6 (delta 2), pack-reused 5901 (from 3)\u001b[K\n",
-            "Receiving objects: 100% (5930/5930), 1.26 GiB | 24.86 MiB/s, done.\n",
-            "Resolving deltas: 100% (30/30), done.\n",
-            "/content/PneuModel\n"
+            "remote: Enumerating objects: 5937, done.\u001b[K\n",
+            "remote: Counting objects: 100% (36/36), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (33/33), done.\u001b[K\n",
+            "remote: Total 5937 (delta 14), reused 9 (delta 3), pack-reused 5901 (from 3)\u001b[K\n",
+            "Receiving objects: 100% (5937/5937), 1.26 GiB | 35.65 MiB/s, done.\n",
+            "Resolving deltas: 100% (32/32), done.\n",
+            "/content/PneuModel/PneuModel\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pip install -r requirements.txt"
+      ],
+      "metadata": {
+        "id": "176XH80WOGhZ",
+        "outputId": "dd209d8d-8ab1-4655-c9e6-31dd4eeccf1c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Requirement already satisfied: pandas>=2.0 in /usr/local/lib/python3.12/dist-packages (from -r requirements.txt (line 1)) (2.2.2)\n",
+            "Requirement already satisfied: numpy>=1.24 in /usr/local/lib/python3.12/dist-packages (from -r requirements.txt (line 2)) (2.0.2)\n",
+            "Requirement already satisfied: seaborn>=0.12 in /usr/local/lib/python3.12/dist-packages (from -r requirements.txt (line 3)) (0.13.2)\n",
+            "Requirement already satisfied: matplotlib>=3.7 in /usr/local/lib/python3.12/dist-packages (from -r requirements.txt (line 4)) (3.10.0)\n",
+            "Requirement already satisfied: opencv-python>=4.8 in /usr/local/lib/python3.12/dist-packages (from -r requirements.txt (line 5)) (4.13.0.92)\n",
+            "Requirement already satisfied: tensorflow>=2.15 in /usr/local/lib/python3.12/dist-packages (from -r requirements.txt (line 6)) (2.19.0)\n",
+            "Requirement already satisfied: scikit-learn>=1.3 in /usr/local/lib/python3.12/dist-packages (from -r requirements.txt (line 7)) (1.6.1)\n",
+            "Requirement already satisfied: python-dateutil>=2.8.2 in /usr/local/lib/python3.12/dist-packages (from pandas>=2.0->-r requirements.txt (line 1)) (2.9.0.post0)\n",
+            "Requirement already satisfied: pytz>=2020.1 in /usr/local/lib/python3.12/dist-packages (from pandas>=2.0->-r requirements.txt (line 1)) (2025.2)\n",
+            "Requirement already satisfied: tzdata>=2022.7 in /usr/local/lib/python3.12/dist-packages (from pandas>=2.0->-r requirements.txt (line 1)) (2025.3)\n",
+            "Requirement already satisfied: contourpy>=1.0.1 in /usr/local/lib/python3.12/dist-packages (from matplotlib>=3.7->-r requirements.txt (line 4)) (1.3.3)\n",
+            "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.12/dist-packages (from matplotlib>=3.7->-r requirements.txt (line 4)) (0.12.1)\n",
+            "Requirement already satisfied: fonttools>=4.22.0 in /usr/local/lib/python3.12/dist-packages (from matplotlib>=3.7->-r requirements.txt (line 4)) (4.61.1)\n",
+            "Requirement already satisfied: kiwisolver>=1.3.1 in /usr/local/lib/python3.12/dist-packages (from matplotlib>=3.7->-r requirements.txt (line 4)) (1.4.9)\n",
+            "Requirement already satisfied: packaging>=20.0 in /usr/local/lib/python3.12/dist-packages (from matplotlib>=3.7->-r requirements.txt (line 4)) (26.0)\n",
+            "Requirement already satisfied: pillow>=8 in /usr/local/lib/python3.12/dist-packages (from matplotlib>=3.7->-r requirements.txt (line 4)) (11.3.0)\n",
+            "Requirement already satisfied: pyparsing>=2.3.1 in /usr/local/lib/python3.12/dist-packages (from matplotlib>=3.7->-r requirements.txt (line 4)) (3.3.2)\n",
+            "Requirement already satisfied: absl-py>=1.0.0 in /usr/local/lib/python3.12/dist-packages (from tensorflow>=2.15->-r requirements.txt (line 6)) (1.4.0)\n",
+            "Requirement already satisfied: astunparse>=1.6.0 in /usr/local/lib/python3.12/dist-packages (from tensorflow>=2.15->-r requirements.txt (line 6)) (1.6.3)\n",
+            "Requirement already satisfied: flatbuffers>=24.3.25 in /usr/local/lib/python3.12/dist-packages (from tensorflow>=2.15->-r requirements.txt (line 6)) (25.12.19)\n",
+            "Requirement already satisfied: gast!=0.5.0,!=0.5.1,!=0.5.2,>=0.2.1 in /usr/local/lib/python3.12/dist-packages (from tensorflow>=2.15->-r requirements.txt (line 6)) (0.7.0)\n",
+            "Requirement already satisfied: google-pasta>=0.1.1 in /usr/local/lib/python3.12/dist-packages (from tensorflow>=2.15->-r requirements.txt (line 6)) (0.2.0)\n",
+            "Requirement already satisfied: libclang>=13.0.0 in /usr/local/lib/python3.12/dist-packages (from tensorflow>=2.15->-r requirements.txt (line 6)) (18.1.1)\n",
+            "Requirement already satisfied: opt-einsum>=2.3.2 in /usr/local/lib/python3.12/dist-packages (from tensorflow>=2.15->-r requirements.txt (line 6)) (3.4.0)\n",
+            "Requirement already satisfied: protobuf!=4.21.0,!=4.21.1,!=4.21.2,!=4.21.3,!=4.21.4,!=4.21.5,<6.0.0dev,>=3.20.3 in /usr/local/lib/python3.12/dist-packages (from tensorflow>=2.15->-r requirements.txt (line 6)) (5.29.6)\n",
+            "Requirement already satisfied: requests<3,>=2.21.0 in /usr/local/lib/python3.12/dist-packages (from tensorflow>=2.15->-r requirements.txt (line 6)) (2.32.4)\n",
+            "Requirement already satisfied: setuptools in /usr/local/lib/python3.12/dist-packages (from tensorflow>=2.15->-r requirements.txt (line 6)) (75.2.0)\n",
+            "Requirement already satisfied: six>=1.12.0 in /usr/local/lib/python3.12/dist-packages (from tensorflow>=2.15->-r requirements.txt (line 6)) (1.17.0)\n",
+            "Requirement already satisfied: termcolor>=1.1.0 in /usr/local/lib/python3.12/dist-packages (from tensorflow>=2.15->-r requirements.txt (line 6)) (3.3.0)\n",
+            "Requirement already satisfied: typing-extensions>=3.6.6 in /usr/local/lib/python3.12/dist-packages (from tensorflow>=2.15->-r requirements.txt (line 6)) (4.15.0)\n",
+            "Requirement already satisfied: wrapt>=1.11.0 in /usr/local/lib/python3.12/dist-packages (from tensorflow>=2.15->-r requirements.txt (line 6)) (2.1.1)\n",
+            "Requirement already satisfied: grpcio<2.0,>=1.24.3 in /usr/local/lib/python3.12/dist-packages (from tensorflow>=2.15->-r requirements.txt (line 6)) (1.78.0)\n",
+            "Requirement already satisfied: tensorboard~=2.19.0 in /usr/local/lib/python3.12/dist-packages (from tensorflow>=2.15->-r requirements.txt (line 6)) (2.19.0)\n",
+            "Requirement already satisfied: keras>=3.5.0 in /usr/local/lib/python3.12/dist-packages (from tensorflow>=2.15->-r requirements.txt (line 6)) (3.10.0)\n",
+            "Requirement already satisfied: h5py>=3.11.0 in /usr/local/lib/python3.12/dist-packages (from tensorflow>=2.15->-r requirements.txt (line 6)) (3.15.1)\n",
+            "Requirement already satisfied: ml-dtypes<1.0.0,>=0.5.1 in /usr/local/lib/python3.12/dist-packages (from tensorflow>=2.15->-r requirements.txt (line 6)) (0.5.4)\n",
+            "Requirement already satisfied: scipy>=1.6.0 in /usr/local/lib/python3.12/dist-packages (from scikit-learn>=1.3->-r requirements.txt (line 7)) (1.16.3)\n",
+            "Requirement already satisfied: joblib>=1.2.0 in /usr/local/lib/python3.12/dist-packages (from scikit-learn>=1.3->-r requirements.txt (line 7)) (1.5.3)\n",
+            "Requirement already satisfied: threadpoolctl>=3.1.0 in /usr/local/lib/python3.12/dist-packages (from scikit-learn>=1.3->-r requirements.txt (line 7)) (3.6.0)\n",
+            "Requirement already satisfied: wheel<1.0,>=0.23.0 in /usr/local/lib/python3.12/dist-packages (from astunparse>=1.6.0->tensorflow>=2.15->-r requirements.txt (line 6)) (0.46.3)\n",
+            "Requirement already satisfied: rich in /usr/local/lib/python3.12/dist-packages (from keras>=3.5.0->tensorflow>=2.15->-r requirements.txt (line 6)) (13.9.4)\n",
+            "Requirement already satisfied: namex in /usr/local/lib/python3.12/dist-packages (from keras>=3.5.0->tensorflow>=2.15->-r requirements.txt (line 6)) (0.1.0)\n",
+            "Requirement already satisfied: optree in /usr/local/lib/python3.12/dist-packages (from keras>=3.5.0->tensorflow>=2.15->-r requirements.txt (line 6)) (0.18.0)\n",
+            "Requirement already satisfied: charset_normalizer<4,>=2 in /usr/local/lib/python3.12/dist-packages (from requests<3,>=2.21.0->tensorflow>=2.15->-r requirements.txt (line 6)) (3.4.4)\n",
+            "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.12/dist-packages (from requests<3,>=2.21.0->tensorflow>=2.15->-r requirements.txt (line 6)) (3.11)\n",
+            "Requirement already satisfied: urllib3<3,>=1.21.1 in /usr/local/lib/python3.12/dist-packages (from requests<3,>=2.21.0->tensorflow>=2.15->-r requirements.txt (line 6)) (2.5.0)\n",
+            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.12/dist-packages (from requests<3,>=2.21.0->tensorflow>=2.15->-r requirements.txt (line 6)) (2026.1.4)\n",
+            "Requirement already satisfied: markdown>=2.6.8 in /usr/local/lib/python3.12/dist-packages (from tensorboard~=2.19.0->tensorflow>=2.15->-r requirements.txt (line 6)) (3.10.2)\n",
+            "Requirement already satisfied: tensorboard-data-server<0.8.0,>=0.7.0 in /usr/local/lib/python3.12/dist-packages (from tensorboard~=2.19.0->tensorflow>=2.15->-r requirements.txt (line 6)) (0.7.2)\n",
+            "Requirement already satisfied: werkzeug>=1.0.1 in /usr/local/lib/python3.12/dist-packages (from tensorboard~=2.19.0->tensorflow>=2.15->-r requirements.txt (line 6)) (3.1.5)\n",
+            "Requirement already satisfied: markupsafe>=2.1.1 in /usr/local/lib/python3.12/dist-packages (from werkzeug>=1.0.1->tensorboard~=2.19.0->tensorflow>=2.15->-r requirements.txt (line 6)) (3.0.3)\n",
+            "Requirement already satisfied: markdown-it-py>=2.2.0 in /usr/local/lib/python3.12/dist-packages (from rich->keras>=3.5.0->tensorflow>=2.15->-r requirements.txt (line 6)) (4.0.0)\n",
+            "Requirement already satisfied: pygments<3.0.0,>=2.13.0 in /usr/local/lib/python3.12/dist-packages (from rich->keras>=3.5.0->tensorflow>=2.15->-r requirements.txt (line 6)) (2.19.2)\n",
+            "Requirement already satisfied: mdurl~=0.1 in /usr/local/lib/python3.12/dist-packages (from markdown-it-py>=2.2.0->rich->keras>=3.5.0->tensorflow>=2.15->-r requirements.txt (line 6)) (0.1.2)\n"
           ]
         }
       ]
@@ -95,12 +171,12 @@
       ],
       "metadata": {
         "id": "k4FLLG3wFC9C",
-        "outputId": "dc442b24-fea8-4092-fa4a-b195945390c6",
+        "outputId": "23759d23-d1d1-40fa-efe1-cd204c5050bb",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -123,7 +199,7 @@
       "metadata": {
         "id": "JnAZv2yQ4wXu"
       },
-      "execution_count": 3,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -160,9 +236,9 @@
           "height": 112
         },
         "id": "YA9w28yE46qh",
-        "outputId": "7de82660-c59d-477b-b413-3192de40dab8"
+        "outputId": "59a71e23-76cb-4b9a-80f7-8f1fe4bbf98c"
       },
-      "execution_count": 4,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -174,7 +250,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-367d4b29-ac7a-4fae-adaf-27bebfc1799e\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-44981b8b-0f8c-4dde-b5c8-390bcb6091e7\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -214,7 +290,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-367d4b29-ac7a-4fae-adaf-27bebfc1799e')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-44981b8b-0f8c-4dde-b5c8-390bcb6091e7')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -266,12 +342,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-367d4b29-ac7a-4fae-adaf-27bebfc1799e button.colab-df-convert');\n",
+              "        document.querySelector('#df-44981b8b-0f8c-4dde-b5c8-390bcb6091e7 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-367d4b29-ac7a-4fae-adaf-27bebfc1799e');\n",
+              "        const element = document.querySelector('#df-44981b8b-0f8c-4dde-b5c8-390bcb6091e7');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -291,7 +367,7 @@
               "  </div>\n",
               "\n",
               "\n",
-              "  <div id=\"id_44eac663-6377-4192-b8d1-aa1b2f8ffc32\">\n",
+              "  <div id=\"id_4d5b616f-f71b-4912-84d1-58cb5dc9bc12\">\n",
               "    <style>\n",
               "      .colab-df-generate {\n",
               "        background-color: #E8F0FE;\n",
@@ -335,7 +411,7 @@
               "    <script>\n",
               "      (() => {\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#id_44eac663-6377-4192-b8d1-aa1b2f8ffc32 button.colab-df-generate');\n",
+              "        document.querySelector('#id_4d5b616f-f71b-4912-84d1-58cb5dc9bc12 button.colab-df-generate');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
@@ -356,7 +432,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 15
         }
       ]
     },
@@ -382,9 +458,9 @@
           "height": 472
         },
         "id": "LIRNkiY06Ner",
-        "outputId": "f77ae0fd-3dee-4f8c-d077-b925a1a5a04f"
+        "outputId": "c9976475-f163-4922-afda-7ca2c010fbe5"
       },
-      "execution_count": 5,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "display_data",
@@ -430,7 +506,7 @@
       "metadata": {
         "id": "jr7x4s4v3nux"
       },
-      "execution_count": 6,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -461,12 +537,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 462
+          "height": 516
         },
         "id": "fcZpNltx3ozy",
-        "outputId": "626dd43a-f241-4ac0-bbb6-fafa24693941"
+        "outputId": "c5432ac1-97b4-4775-8541-0325f74bbb65"
       },
-      "execution_count": 7,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "display_data",
@@ -530,19 +606,19 @@
           "height": 489
         },
         "id": "l2w0crOy9l-i",
-        "outputId": "f306f3be-bd2d-4bc3-b2ee-8479a71113f5"
+        "outputId": "f9108251-403d-4c0a-9995-a468a0bc5ade"
       },
-      "execution_count": 8,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.legend.Legend at 0x7ac1307a53a0>"
+              "<matplotlib.legend.Legend at 0x7e35b701cbc0>"
             ]
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 19
         },
         {
           "output_type": "display_data",
@@ -611,19 +687,19 @@
           "height": 624
         },
         "id": "fQR7f08cD2gK",
-        "outputId": "df5fbc16-6b4f-4e85-fed7-18a312a3352a"
+        "outputId": "fb4029e7-6eca-4ed5-ce74-b2a7972c2b93"
       },
-      "execution_count": 9,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<seaborn.axisgrid.JointGrid at 0x7ac1307a5280>"
+              "<seaborn.axisgrid.JointGrid at 0x7e35c0bc35c0>"
             ]
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 20
         },
         {
           "output_type": "display_data",
