--- a/notebooks/inferencia.ipynb
+++ b/notebooks/inferencia.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPd6BPoOATNmtEzT4GjqikN",
+      "authorship_tag": "ABX9TyO3rO5DnEzuZKmytCfjtHik",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,21 +37,21 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a47b9434-4bb6-4414-f92c-8256428331c7"
+        "outputId": "b0b501f2-1fb3-429d-9984-32adec7021f4"
       },
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Cloning into 'PneuModel'...\n",
-            "remote: Enumerating objects: 5949, done.\u001b[K\n",
-            "remote: Counting objects: 100% (48/48), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (45/45), done.\u001b[K\n",
-            "remote: Total 5949 (delta 20), reused 9 (delta 3), pack-reused 5901 (from 3)\u001b[K\n",
-            "Receiving objects: 100% (5949/5949), 1.26 GiB | 34.58 MiB/s, done.\n",
-            "Resolving deltas: 100% (38/38), done.\n",
+            "remote: Enumerating objects: 5960, done.\u001b[K\n",
+            "remote: Counting objects: 100% (59/59), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (56/56), done.\u001b[K\n",
+            "remote: Total 5960 (delta 28), reused 8 (delta 3), pack-reused 5901 (from 3)\u001b[K\n",
+            "Receiving objects: 100% (5960/5960), 1.26 GiB | 32.12 MiB/s, done.\n",
+            "Resolving deltas: 100% (46/46), done.\n",
             "/content/PneuModel\n"
           ]
         }
@@ -64,12 +64,12 @@
       ],
       "metadata": {
         "id": "fPA0hrx6Kfoe",
-        "outputId": "6fe2e5aa-bb11-4e38-e5e3-22d62848b2b3",
+        "outputId": "4e670387-b76b-461b-9e39-3a6230a0d60c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -82,6 +82,8 @@
             "Requirement already satisfied: opencv-python>=4.8 in /usr/local/lib/python3.12/dist-packages (from -r requirements.txt (line 5)) (4.13.0.92)\n",
             "Requirement already satisfied: tensorflow>=2.15 in /usr/local/lib/python3.12/dist-packages (from -r requirements.txt (line 6)) (2.19.0)\n",
             "Requirement already satisfied: scikit-learn>=1.3 in /usr/local/lib/python3.12/dist-packages (from -r requirements.txt (line 7)) (1.6.1)\n",
+            "Collecting tf-explain (from -r requirements.txt (line 8))\n",
+            "  Downloading tf_explain-0.3.1-py3-none-any.whl.metadata (9.3 kB)\n",
             "Requirement already satisfied: python-dateutil>=2.8.2 in /usr/local/lib/python3.12/dist-packages (from pandas>=2.0->-r requirements.txt (line 1)) (2.9.0.post0)\n",
             "Requirement already satisfied: pytz>=2020.1 in /usr/local/lib/python3.12/dist-packages (from pandas>=2.0->-r requirements.txt (line 1)) (2025.2)\n",
             "Requirement already satisfied: tzdata>=2022.7 in /usr/local/lib/python3.12/dist-packages (from pandas>=2.0->-r requirements.txt (line 1)) (2025.3)\n",
@@ -128,7 +130,11 @@
             "Requirement already satisfied: markupsafe>=2.1.1 in /usr/local/lib/python3.12/dist-packages (from werkzeug>=1.0.1->tensorboard~=2.19.0->tensorflow>=2.15->-r requirements.txt (line 6)) (3.0.3)\n",
             "Requirement already satisfied: markdown-it-py>=2.2.0 in /usr/local/lib/python3.12/dist-packages (from rich->keras>=3.5.0->tensorflow>=2.15->-r requirements.txt (line 6)) (4.0.0)\n",
             "Requirement already satisfied: pygments<3.0.0,>=2.13.0 in /usr/local/lib/python3.12/dist-packages (from rich->keras>=3.5.0->tensorflow>=2.15->-r requirements.txt (line 6)) (2.19.2)\n",
-            "Requirement already satisfied: mdurl~=0.1 in /usr/local/lib/python3.12/dist-packages (from markdown-it-py>=2.2.0->rich->keras>=3.5.0->tensorflow>=2.15->-r requirements.txt (line 6)) (0.1.2)\n"
+            "Requirement already satisfied: mdurl~=0.1 in /usr/local/lib/python3.12/dist-packages (from markdown-it-py>=2.2.0->rich->keras>=3.5.0->tensorflow>=2.15->-r requirements.txt (line 6)) (0.1.2)\n",
+            "Downloading tf_explain-0.3.1-py3-none-any.whl (43 kB)\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m43.6/43.6 kB\u001b[0m \u001b[31m1.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hInstalling collected packages: tf-explain\n",
+            "Successfully installed tf-explain-0.3.1\n"
           ]
         }
       ]
@@ -171,12 +177,12 @@
       ],
       "metadata": {
         "id": "xzqcLz7_KhTw",
-        "outputId": "e0541d34-a239-4afe-d097-95bc90e5f8db",
+        "outputId": "e276c094-b38f-4590-d664-eed41391365d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -190,7 +196,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 5,
       "metadata": {
         "id": "spkLoWetfp-q"
       },
@@ -219,9 +225,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "1715706c-407f-480f-a33a-5673e139101b"
+        "outputId": "eee48ef5-7986-4ad2-fbba-a19505d7174b"
       },
-      "execution_count": 5,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -237,7 +243,7 @@
       "cell_type": "code",
       "source": [
         "# pré processamento da imagem\n",
-        "test_datagen = tf.keras.preprocessing.image.ImageDataGenerator(rescale=1./255)\n",
+        "test_datagen = tf.keras.preprocessing.image.ImageDataGenerator()\n",
         "\n",
         "test_generator = test_datagen.flow_from_directory(\n",
         "    path_teste,\n",
@@ -255,9 +261,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "7804f6a0-bd70-4c0c-f294-f6839fe605a1"
+        "outputId": "c4bdf1db-8d40-494d-acdf-a2bac3113473"
       },
-      "execution_count": 6,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -278,7 +284,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\u001b[1m624/624\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m143s\u001b[0m 220ms/step\n"
+            "\u001b[1m624/624\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m381s\u001b[0m 610ms/step\n"
           ]
         }
       ]
@@ -301,24 +307,24 @@
           "base_uri": "https://localhost:8080/",
           "height": 206
         },
-        "outputId": "fa378889-970a-47f4-ade0-a51d0f8716a7"
+        "outputId": "16338a2c-f327-4a7a-c687-9dfa226dfa7b"
       },
-      "execution_count": 7,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
               "              id    target\n",
-              "0  img_0001.jpeg  0.310470\n",
-              "1  img_0002.jpeg  0.535725\n",
-              "2  img_0003.jpeg  0.998388\n",
-              "3  img_0004.jpeg  0.006515\n",
-              "4  img_0005.jpeg  0.018332"
+              "0  img_0001.jpeg  0.382500\n",
+              "1  img_0002.jpeg  0.694491\n",
+              "2  img_0003.jpeg  0.999546\n",
+              "3  img_0004.jpeg  0.003125\n",
+              "4  img_0005.jpeg  0.134016"
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-f396165d-568c-4bf8-87a9-2f10e93d7dbd\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-7f4a1b87-eb96-4559-b00c-6b37f0bf7af4\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -345,27 +351,27 @@
               "    <tr>\n",
               "      <th>0</th>\n",
               "      <td>img_0001.jpeg</td>\n",
-              "      <td>0.310470</td>\n",
+              "      <td>0.382500</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
               "      <td>img_0002.jpeg</td>\n",
-              "      <td>0.535725</td>\n",
+              "      <td>0.694491</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
               "      <td>img_0003.jpeg</td>\n",
-              "      <td>0.998388</td>\n",
+              "      <td>0.999546</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
               "      <td>img_0004.jpeg</td>\n",
-              "      <td>0.006515</td>\n",
+              "      <td>0.003125</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
               "      <td>img_0005.jpeg</td>\n",
-              "      <td>0.018332</td>\n",
+              "      <td>0.134016</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
@@ -373,7 +379,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-f396165d-568c-4bf8-87a9-2f10e93d7dbd')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-7f4a1b87-eb96-4559-b00c-6b37f0bf7af4')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -425,12 +431,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-f396165d-568c-4bf8-87a9-2f10e93d7dbd button.colab-df-convert');\n",
+              "        document.querySelector('#df-7f4a1b87-eb96-4559-b00c-6b37f0bf7af4 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-f396165d-568c-4bf8-87a9-2f10e93d7dbd');\n",
+              "        const element = document.querySelector('#df-7f4a1b87-eb96-4559-b00c-6b37f0bf7af4');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -456,11 +462,11 @@
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "dataframe",
               "variable_name": "submissao",
-              "summary": "{\n  \"name\": \"submissao\",\n  \"rows\": 624,\n  \"fields\": [\n    {\n      \"column\": \"id\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"num_unique_values\": 624,\n        \"samples\": [\n          \"img_0447.jpeg\",\n          \"img_0497.jpeg\",\n          \"img_0216.jpeg\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"target\",\n      \"properties\": {\n        \"dtype\": \"float32\",\n        \"num_unique_values\": 621,\n        \"samples\": [\n          0.007732186000794172,\n          0.9996439218521118,\n          0.11208760738372803\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    }\n  ]\n}"
+              "summary": "{\n  \"name\": \"submissao\",\n  \"rows\": 624,\n  \"fields\": [\n    {\n      \"column\": \"id\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"num_unique_values\": 624,\n        \"samples\": [\n          \"img_0447.jpeg\",\n          \"img_0497.jpeg\",\n          \"img_0216.jpeg\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"target\",\n      \"properties\": {\n        \"dtype\": \"float32\",\n        \"num_unique_values\": 371,\n        \"samples\": [\n          0.9999566078186035,\n          0.0005449464661069214,\n          0.9937008619308472\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    }\n  ]\n}"
             }
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 11
         }
       ]
     },
@@ -473,7 +479,7 @@
       "metadata": {
         "id": "NQPsBywDpUnQ"
       },
-      "execution_count": 8,
+      "execution_count": 12,
       "outputs": []
     }
   ]
